--- a/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
@@ -337,6 +337,7 @@
         padding: 6px 20px;
         text-decoration: none;
         background-color: @ssb-theme-btn-style-11-bg-color;
+        border-color: #48b1cc;
         &:hover {
             background-color: lighten(@ssb-theme-btn-style-11-bg-color, 8%)!important;
         }
