--- a/public/less/sections/customers.less
+++ b/public/less/sections/customers.less
@@ -72,6 +72,7 @@
       table{
           width: 100%;
           tr {
+            border-left:none ;
             &:nth-child(even) {
                 background-color: #efeeef
             }
