--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -186,6 +186,13 @@
         margin: 35px 0px;
         justify-content: flex-start;
     }
+    .ssb-page-section-layout-nav-hero { 
+        &.ssb-section-amm, &.ssb-section-wmm{
+            .flex-container-absolute-column {
+                margin: 0px; 
+            }
+        }
+    }
     .ssb-page-section-layout-nav-hero [social-link-component] {
         max-width: 100%;
         z-index: 2 !important;
