--- a/public/admin/assets/js/traffic/site-traffic/site-traffic.component.html
+++ b/public/admin/assets/js/traffic/site-traffic/site-traffic.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </section>
-<div st-table="displayedFingerprints" st-safe-src="vm.state.fingerPrints" st-filtered-collection>
+<div st-table="displayedFingerprints" st-safe-src="vm.state.fingerPrints" st-filtered-collection ng-init="tableView='list'">
         <div class="container-fluid container-fullw bg-white padding-top-0 padding-bottom-0">
             <div class="col-sm-12">
                 <div class="panel panel-transparent row margin-bottom-0 btn-area-res">
@@ -42,12 +42,14 @@
         <table class="table table-striped table-hover bg-white margin-bottom-0" ng-class="{'grid': tableView == 'grid', 'bg-white table-list-view': tableView == 'list'}" fixed-header-table>
             <thead ng-class="{'bg-white': tableView == 'grid'}" sticky offset="65" sticky-class="sticky-header-class">
                 <tr>                        
-                    <th st-sort="_id">Fingerprint</th>                        
+                    <th st-sort="_id">Fingerprint</th>
+                    <th class="hidden">Last Seen</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="fingerprint in displayedFingerprints" class="" ng-click="viewSingleProduct(product)">                        
                     <td class="text-adjust-col"><strong>Fingerprint: </strong><span class="text-adjust-inner-content">{{fingerprint._id}}</span></td>
+                    <td class="text-adjust-col hidden"><strong>Last Seen: </strong><span class="text-adjust-inner-content">{{fingerprint.sessions[0].server_time_dt}}</span></td>
                 </tr>
             </tbody>
             <tfoot>
