--- a/public/admin/assets/var/leadsource/views/partials/nav.html
+++ b/public/admin/assets/var/leadsource/views/partials/nav.html
@@ -63,6 +63,11 @@
 					<span class="title" translate="sidebar.nav.website.ANALYTICS"> Analytics </span>
 				</a>
 			</li>
+			<li ui-sref-active="active">
+				<a ui-sref="app.website.traffic">
+					<span class="title"> Site Traffic </span>
+				</a>
+			</li>
 			<!-- <li ui-sref-active="active">
 				<a ui-sref="app.website.templates">
 					<span class="title" translate="sidebar.nav.website.TEMPLATES"> Templates </span>
